tests/type-error/TypeMismatch2.vix
test : int
test x = x
